2004-02-10  Tim Perdue  <tim@perdue.net>

	* re-organize and mild cleanup of FRS - all files
	are in new /frs/ directory. NOTE - the sys_use_files
	switch is changes to sys_use_frs for consistency!

2004-02-09  Tom Copeland <tom@infoether.com>
	* Implemented RFE [ #657 ] Trove Deletion Error
	 Message Unclear - Could Improve

2004-02-09  Guillaume Smet <guillaume-gforge@smet.org>

	* Implemented a new search engine architecture
	* Applied patch [ #616 ]
	* Fixed bug [ #409 ] Scm index.php was not XHTML valid

2004-02-06  Tom Copeland <tom@infoether.com>
	* Implemented RFE [ #672 ] X people are monitoring this package

2004-02-05  Christian Bayle <bayle@debian.org>

	* Adding $sys_use_people to setup and etc/local.d/25features

2004-02-05  Tim Perdue  <tim@perdue.net>

	* Adding $sys_use_people to local.inc to turn off project openings tab

2004-02-04  Guillaume Smet <guillaume-gforge@smet.org>

	* Fixed bug [ #644 ] Wrong language code for chinese in supported_languages

2004-02-04  Tom Copeland <tom@infoether.com>
	* Applied patch [ #575 ] In forum style "flat" viewing a 
	news item generates an error
	* Fixed bug [ #597 ] Viewing aggregate survey result contains some errors
	* Fixed bug [ #622 ] Download nightly cvs tarballs errors incorrectly
	* Fixed bug [ #654 ] Unable to remove processor
	* Fixed bug [ #489 ] HTML isn't getting escaped right in forums

2004-02-03  Tom Copeland <tom@infoether.com>
	* Applied patch [ #662 ] New german localization diff file
	* Applied patch [ #665 ] Spanish mail_charset
	* Applied patch [ #669 ] Made the Gantt chart assignee and status 
	combo boxes working

2004-01-30  Guillaume Smet <guillaume-gforge@smet.org>

	* Defined 0 as default value for tracker item counts in
	artifact_counts_agg table

2004-01-24  Christian Bayle <bayle@debian.org>
	* cvs admin -kb on all .png files and added according rule in
	CVSROOT/cvswrappers

2004-01-24  Sung Kim <hunkim@cs.ucsc.edu>

	* Adding the sys_use_ssl option